--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 </head>
 <body>
     <header>
-        <h1>YOUR NAME</h1>
-        <div class="subtitle">Master of Information Technology | Hong Kong University of Science and Technology</div>
+        <h1>zhou yuming</h1>
+
         <div class="contact-info">
-            <a href="mailto:your-email@connect.ust.hk">your-email@connect.ust.hk</a> | 
-            <a href="https://github.com/yourusername">GitHub</a> | 
-            <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
+            <a href="mailto:yzhoufu@connect.ust.hk">yzhoufu@connect.ust.hk</a> | 
+            <a href="https://github.com/zhou920ming">GitHub</a> | 
+            
         </div>
     </header>
 
@@ -95,9 +95,7 @@
         <h2>About Me</h2>
         <p>
             I am a Master of Information Technology student at HKUST with a strong interest in 
-            [your interests, e.g., artificial intelligence, cybersecurity, software engineering]. 
-            My research focuses on [brief description of your research focus]. 
-            I enjoy solving complex problems and building innovative software solutions.
+            3d reconstruction. Currently I am studying in HKUST and seek for research opportunity
         </p>
     </section>
 
@@ -105,41 +103,18 @@
         <h2>Education</h2>
         <div class="experience">
             <strong>Hong Kong University of Science and Technology</strong><br>
-            Master of Information Technology | 2023 - Present<br>
-            Relevant coursework: [List key courses]
+            Master of Information Technology | 2024 - Present<br>
         </div>
         <div class="experience">
-            <strong>[Your Undergraduate University]</strong><br>
-            Bachelor of [Your Degree] in [Major] | [Years]<br>
-            [Any honors or relevant details]
+            <strong>University of Auckland</strong><br>
+            Bachelor of Science in Computer science | [2021-2023]<br>
         </div>
     </section>
 
-    <section id="projects">
-        <h2>Selected Projects</h2>
-        <div class="project">
-            <strong>Project Title 1</strong><br>
-            <em>Technologies used: [List technologies]</em><br>
-            Description of the project and your contributions. Highlight any significant results or impacts.
-        </div>
-        <div class="project">
-            <strong>Project Title 2</strong><br>
-            <em>Technologies used: [List technologies]</em><br>
-            Description of the project and your contributions.
-        </div>
-    </section>
 
-    <section id="skills">
-        <h2>Technical Skills</h2>
-        <ul>
-            <li><strong>Programming Languages:</strong> [List languages you're proficient in]</li>
-            <li><strong>Frameworks & Tools:</strong> [List frameworks, tools, etc.]</li>
-            <li><strong>Areas of Expertise:</strong> [List your areas of expertise]</li>
-        </ul>
-    </section>
 
     <footer>
-        &copy; 2023 Your Name | Last updated: [Month Year]
+        &copy; yuming zhou; Last updated: June.2025 |
     </footer>
 </body>
 </html>
