--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </p>
             </section>
 
-            <section id="education">
+           <section id="education">
     <h2>Education</h2>
     <div class="experience">
         <strong>Hong Kong University of Science and Technology</strong><br>
@@ -167,12 +167,15 @@
     <div class="experience">
         <strong>University of Auckland</strong><br>
         Bachelor of Science in Computer Science | 2021-2023<br>
-        <p style="margin-top: 10px;">
-            <a href="javascript:void(0);" onclick="openTab('documents')" style="color: var(--primary-color); text-decoration: underline;">
-                If you want to know more about my GPA or enrolled courses, please click to see the documents.
-            </a>
-        </p>
     </div>
+    
+    <!-- 新增的超链接（放在两个学校信息之后） -->
+    <p style="margin-top: 15px; text-align: center;">
+        <a href="javascript:void(0);" onclick="openTab('documents')" 
+           style="color: var(--primary-color); font-weight: bold; text-decoration: underline;">
+            If you want to know more about my GPA or enrolled courses, please click to see the documents.
+        </a>
+    </p>
 </section>
         </div>
         
